bot/.stack-work/logs/wreq-0.5.0.1.log
[1 of 2] Compiling Main             ( /tmp/stack7970/wreq-0.5.0.1/Setup.hs, /tmp/stack7970/wreq-0.5.0.1/.stack-work/dist/x86_64-linux/Cabal-2.0.1.0/setup/Main.o )

/tmp/stack7970/wreq-0.5.0.1/Setup.hs:10:4: error:
    Module
    ‘Distribution.Package’
    does not export
    ‘PackageName(PackageName)’
   |
10 |   (PackageName(PackageName), Package, PackageId, InstalledPackageId,
   |    ^^^^^^^^^^^^^^^^^^^^^^^^
